# mshot

./: Cargo.toml  README.md  build.rs
.github/actions/: setup.yml
.github/actions/dependencies/screenshots/: action.yml
.github/actions/setup/: action.yml
.github/actions/setup-linux/: action.yml
.github/actions/setup-macos-latest/: action.yml
.github/actions/setup-ubuntu-latest/: action.yml
.github/actions/setup-windows-latest/: action.yml
.github/actions/setup/macos-latest/: action.yml
.github/actions/setup/ubuntu-latest/: action.yml
.github/actions/setup/windows-latest/: action.yml
.github/actions/tools/: action.yml
.github/actions/tools/dbus/: action.yml
.github/actions/tools/protoc/: action.yml
.github/actions/tools/rust/: action.yml
.github/actions/util/add-to-path/: action.yml
.github/actions/util/add_to_path/: action.yml
.github/actions/util/cache/: action.yml
.github/actions/util/log_task/: action.yml
.github/actions/util/register_program/: action.yml
.github/workflows/: ci.yml  windows.yml
client/: Cargo.toml
client/src/: main.rs
info_client/: Cargo.toml
info_client/src/: main.rs
info_server/: Cargo.toml
info_server/src/: main.rs
proto/: Cargo.toml  build.rs  screenshot.proto
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  screenshot.rs
