[package]
name = "info_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["info_client", "info_server"]

[dependencies]
prost = "0.11.8"
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"