[package]
name = "mshot_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
prost = "0.11.8"
tonic = "0.8.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.1.13", features = ["derive"] }

mshot_proto = { path = "../proto" }